--- a/index.html
+++ b/index.html
@@ -17,9 +17,9 @@
         /* font-family : 'Lato', sans-serif; */
     }
 
-    .team-section{
+    /* .team-section{
         width : 100%;
-    }
+    } */
 
     .team-section .container {
         width : 80%;
@@ -67,6 +67,9 @@
         padding : 20px;
         cursor: pointer;
         flex-direction: column; 
+        position: relative;
+        flex-wrap: wrap;
+
     }
 
     /* .team-section .container .team-card .card:hover{
@@ -77,7 +80,6 @@
     .team-section .container .team-card .card .img-section img{
         height : 350px;
         width : 350px;
-
     }
 
     .team-section .container .team-card .card .content{
@@ -125,6 +127,10 @@
         font-family: Freight Neo;   
         background-color: #c3c2c3;     
         padding : 50px 20px;
+    }
+
+    img .img-teams{
+        margin : 0;
     }
 
     .teams-section{
@@ -221,7 +227,7 @@
             <div class="team-card">
                 <div class="card">
                     <div class="img-section">
-                        <img src="gambar 1.jpg" alt="">
+                        <img src="images/yeremia2.jpg" alt="">
                     </div>
                     <div class="content">
                         <h3>Yeremia Yosefan Pane</h3>
@@ -233,7 +239,7 @@
                 </div>
                 <div class="card">
                     <div class="img-section">
-                        <img src="gambar 1.jpg" alt="">
+                        <img src="images/Taufik.jpg" alt="">
                     </div>
                     <div class="content">
                         <h3>M. Taufik</h3>
@@ -244,7 +250,7 @@
                     </div>
                 </div><div class="card">
                     <div class="img-section">
-                        <img src="gambar 1.jpg" alt="">
+                        <img src="images/alfattah.png" alt="">
                     </div>
                     <div class="content">
                         <h3>Alfattah Altararais</h3>
@@ -255,7 +261,7 @@
                 </div>
                 <div class="card">
                     <div class="img-section">
-                        <img src="gambar 2.jpg" alt="">
+                        <img src="images/putri.jpeg" alt="">
                     </div>
                     <div class="content">
                         <h3>Putri Aisyah Nulhakim</h3>
@@ -288,7 +294,7 @@
                 </div>
                 <div class="card">
                     <div class="img-section">
-                        <img src="gambar 2.jpg" alt="">
+                        <img src="" alt="">
                     </div>
                     <div class="content">
                         <h3>Reza Ananda Hatmi</h3>
@@ -299,7 +305,7 @@
                 </div>
                 <div class="card">
                     <div class="img-section">
-                        <img src="gambar 2.jpg" alt="">
+                        <img src="images/fachriza.jpg" alt="">
                     </div>
                     <div class="content">
                         <h3>Fachriza Djuanda</h3>
@@ -321,7 +327,7 @@
                 </div>
                 <div class="card">
                     <div class="img-section">
-                        <img src="gambar 2.jpg" alt="">
+                        <img src="images/ari.jpg" alt="">
                     </div>
                     <div class="content">
                         <h3>M. Ari Maulanan</h3>
@@ -360,7 +366,7 @@
             </p>
         </div>
         
-        <img src="teams.png" alt="">
+        <img src="images/teams.png" alt="" class ="img-teams">
         <div class="teams-section">
             <div class="container">
                 <div class="row">
