--- a/index.html
+++ b/index.html
@@ -17,9 +17,9 @@
         /* font-family : 'Lato', sans-serif; */
     }
 
-    /* .team-section{
+    .team-section{
         width : 100%;
-    } */
+    }
 
     .team-section .container {
         width : 80%;
@@ -42,6 +42,7 @@
         letter-spacing: 1,5px;
         color: #0f0f0e;
         font-family: Freight Neo;
+        font-weight : normal;
     }
 
     .team-section .container .row .title p{
@@ -91,15 +92,16 @@
         font-size: 27px;
         margin-top : 10px;
         letter-spacing: 1.5px;
-        color : #639ab8;
-        font-family: FreightNeo;
+        color : #252525;
+        font-family: Freight Neo;
+        
     }
     
     .team-section .container .team-card .card .content h4{
         font-size: 17px;
         margin-top : 10px;
         letter-spacing: 1.5px;
-        color: #6e6e6e;
+        color: #3f3f3f;
         font-family :FreightNeo;
     }
     .team-section .container .team-card .card .content p{
@@ -165,10 +167,11 @@
         flex-direction: column; 
     }
 
-    .teams-section .container .teams-card .card .heading h2{
+    h2{
         background-color : #c2c2c3;
         font-family: Freight Neo;
         font-size: 50px;
+        font-weight : normal;
     }
 
     .teams-section .container .teams-card .card .heading p{
@@ -210,7 +213,7 @@
                 <div class="title">
                     <h1>WE</h1>
                     <h1>LEVEL UP</h1>
-                    <h1>PROGRAMMER</h1>
+                    <h1>DEVELOPER</h1>
                     <p>ABOUT US</p>
                 </div>
             </div>
@@ -320,7 +323,7 @@
                         <img src="images/ari.jpg" alt="">
                     </div>
                     <div class="content">
-                        <h3>M. Ari Maulanan</h3>
+                        <h3>M. Ari Maulana</h3>
                         <h4>UI/UX</h4>
                         <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Deleniti quo ipsam eos velit rem, quaerat iure iusto. 
                             Nobis maxime accusantium fugiat, odit itaque quo voluptatibus repudiandae dolorem.</p> 
