--- a/index.html
+++ b/index.html
@@ -265,7 +265,7 @@
                 </div>
                 <div class="card">
                     <div class="img-section">
-                        <img src="gambar 2.jpg" alt="">
+                        <img src="images/rini.jpeg" alt="">
                     </div>
                     <div class="content">
                         <h3>Rini Paramitha Panjaitan</h3>
