--- a/index.html
+++ b/index.html
@@ -276,7 +276,7 @@
                 </div>
                 <div class="card">
                     <div class="img-section">
-                        <img src="gambar 2.jpg" alt="">
+                        <img src="images/saatira.jpeg" alt="">
                     </div>
                     <div class="content">
                         <h3>Saatira Hilmi Batubara</h3>
@@ -287,7 +287,7 @@
                 </div>
                 <div class="card">
                     <div class="img-section">
-                        <img src="" alt="">
+                        <img src="images/reza.jpeg" alt="">
                     </div>
                     <div class="content">
                         <h3>Reza Ananda Hatmi</h3>
@@ -309,7 +309,7 @@
                 </div>
                 <div class="card">
                     <div class="img-section">
-                        <img src="gambar 2.jpg" alt="">
+                        <img src="images/ihsan.PNG" alt="">
                     </div>
                     <div class="content">
                         <h3>Ihsan Zulfami</h3>
@@ -331,7 +331,7 @@
                 </div>
                 <div class="card">
                     <div class="img-section">
-                        <img src="gambar 2.jpg" alt="">
+                        <img src="images/nuel.jpeg" alt="">
                     </div>
                     <div class="content">
                         <h3>Steven Imanuel Naibaho</h3>
